[gd_scene load_steps=6 format=3 uid="uid://cu2as5k55itwe"]

[ext_resource type="Script" path="res://Script/mappa.gd" id="1_a3fxx"]
[ext_resource type="Texture2D" uid="uid://6ekhtboji8al" path="res://Mysprites/pianeta_1.png" id="1_f3gtd"]
[ext_resource type="Texture2D" uid="uid://cgm55xs0lypi5" path="res://Mysprites/pianeta_2.png" id="3_qboma"]
[ext_resource type="Texture2D" uid="uid://bo4etxarbauf0" path="res://Mysprites/pianeta_3.png" id="4_8apid"]
[ext_resource type="Texture2D" uid="uid://dkxqq7cvy450x" path="res://Mysprites/sole.png" id="5_jl4y6"]

[node name="Mappa" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a3fxx")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="IcyPlanet" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="IcyPlanetTexture" type="TextureRect" parent="MarginContainer/VBoxContainer/IcyPlanet"]
layout_mode = 2
texture = ExtResource("1_f3gtd")
stretch_mode = 5

[node name="IcyPlanetButton" type="Button" parent="MarginContainer/VBoxContainer/IcyPlanet/IcyPlanetTexture"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="WaterPlanet" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="WaterPlanetTexture" type="TextureRect" parent="MarginContainer/VBoxContainer/WaterPlanet"]
layout_mode = 2
texture = ExtResource("3_qboma")
stretch_mode = 5

[node name="WaterPlanetButton" type="Button" parent="MarginContainer/VBoxContainer/WaterPlanet/WaterPlanetTexture"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="FirePlanet" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="FirePlanetTexture" type="TextureRect" parent="MarginContainer/VBoxContainer/FirePlanet"]
layout_mode = 2
texture = ExtResource("4_8apid")
stretch_mode = 5

[node name="FirePlanetButton" type="Button" parent="MarginContainer/VBoxContainer/FirePlanet/FirePlanetTexture"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="Sun" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 0

[node name="SunTexture" type="TextureRect" parent="MarginContainer/VBoxContainer/Sun"]
texture_filter = 3
layout_mode = 2
texture = ExtResource("5_jl4y6")
expand_mode = 2
stretch_mode = 6

[node name="BackToMenu" type="Button" parent="MarginContainer/VBoxContainer/Sun/SunTexture"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[connection signal="pressed" from="MarginContainer/VBoxContainer/IcyPlanet/IcyPlanetTexture/IcyPlanetButton" to="." method="_on_icy_planet_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/WaterPlanet/WaterPlanetTexture/WaterPlanetButton" to="." method="_on_water_planet_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/FirePlanet/FirePlanetTexture/FirePlanetButton" to="." method="_on_fire_planet_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Sun/SunTexture/BackToMenu" to="." method="_on_back_to_menu_pressed"]
